# project-mobile-messanger

./: README.md  docker-compose.yml  https_server.js  index.js
backend/: Dockerfile  docker-compose.yml  index.js  package-lock.json  package.json  пупупу.postman_collection.json
backend/api/: openapi.yaml
backend/controllers/: Chats.js  Messages.js  User.js
backend/db/: db.js
backend/haproxy/: haproxy.cfg
backend/middleware/: auth.js
backend/service/: ChatsService.js  MessagesService.js  UserService.js
certs/: personal.key  selfsigned.cnf  selfsigned.crt  selfsigned.srl  server.crt  server.csr  server_csr.cnf
controllers/: Chats.js  Messages.js
frontend/: .flutter-plugins  .flutter-plugins-dependencies  README.md  pubspec.yaml
frontend/.dart_tool/: package_config.json  package_config_subset
frontend/android/: local.properties
frontend/android/app/: CMakeLists.txt  build.gradle.kts
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/cpp/: native-lib.cpp  native-lib.h
frontend/android/app/src/main/cpp/hash/: CMakeLists.txt  hash.c  hash.h
frontend/android/app/src/main/java/com/example/mobile_messanger/: HashHelper.java
frontend/android/app/src/main/kotlin/com/example/mobile_messanger/: MainActivity.kt
frontend/android/app/src/main/res/values/: strings.xml
frontend/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
frontend/ios/Runner/: Info.plist
frontend/lib/: main.dart
frontend/test/: widget_test.dart
hash/: hash.dart  hash.exp  hash.lib
service/: ChatsService.js  MessagesService.js
(+34 files in other folders)
